# weather-bridge

./: Dockerfile  README.md  pyproject.toml  requirements.txt
tests/: test_weather_bridge.py
weather_bridge/: init_mqtt.py  main.py
weather_bridge/libraries/: __init__.py  helpers.py
weather_bridge/routes/: config.py  health.py  hook.py  landing.py
