[tool.poetry]
name = "weather-bridge"
version = "0.1.3"
description = ""
authors = ["Denis Vitez <denis@vitez.si>"]

[tool.poetry.dependencies]
python = "^3.8.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
paho-mqtt = "^1.6.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
